--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -1,6 +1,7 @@
 .page-box {
   border: 1px solid red;
   display: flex;
+  justify-content: space-around;
   :global {
     .content-box {
       color: green;
